unpackaged/main/default/objects/OAuthSettings__c/OAuthSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store OAuth settings</description>
    <label>OAuth Settings</label>
</CustomObject>