unpackaged/main/default/objects/OAuthSettings__c/fields/AuthEndpoint__c.field-meta.xml
<CustomField>
    <fullName>AuthEndpoint__c</fullName>
    <description>The OAuth endpoint.</description>
    <label>Auth Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>